experiment/openrouter-run/stage3-rac/zero_shot/compile_logs/Biggest.log
warning: [options] system modules path not set in conjunction with -source 11
/Users/tiancheng/Documents/Software Validation/verification-project/experiment/openrouter-run/stage3-jml/zero_shot/Biggest/Biggest.java:18: error: ';' expected
          @ loop invariant 0 <= index && index <= a.length;
                          ^
/Users/tiancheng/Documents/Software Validation/verification-project/experiment/openrouter-run/stage3-jml/zero_shot/Biggest/Biggest.java:18: error: not a statement
          @ loop invariant 0 <= index && index <= a.length;
                                      ^
/Users/tiancheng/Documents/Software Validation/verification-project/experiment/openrouter-run/stage3-jml/zero_shot/Biggest/Biggest.java:18: error: Expected a declaration or a JML construct inside the JML annotation here
          @ loop invariant 0 <= index && index <= a.length;
                                ^
/Users/tiancheng/Documents/Software Validation/verification-project/experiment/openrouter-run/stage3-jml/zero_shot/Biggest/Biggest.java:19: error: ';' expected
          @ loop invariant 0 <= biggest && biggest < a.length;
                          ^
/Users/tiancheng/Documents/Software Validation/verification-project/experiment/openrouter-run/stage3-jml/zero_shot/Biggest/Biggest.java:19: error: not a statement
          @ loop invariant 0 <= biggest && biggest < a.length;
                                        ^
/Users/tiancheng/Documents/Software Validation/verification-project/experiment/openrouter-run/stage3-jml/zero_shot/Biggest/Biggest.java:19: error: Expected a declaration or a JML construct inside the JML annotation here
          @ loop invariant 0 <= biggest && biggest < a.length;
                                ^
/Users/tiancheng/Documents/Software Validation/verification-project/experiment/openrouter-run/stage3-jml/zero_shot/Biggest/Biggest.java:20: error: ';' expected
          @ loop invariant (\forall int i; 0 <= i && i < index; a[biggest] >= a[i]);
                          ^
/Users/tiancheng/Documents/Software Validation/verification-project/experiment/openrouter-run/stage3-jml/zero_shot/Biggest/Biggest.java:20: error: not a statement
          @ loop invariant (\forall int i; 0 <= i && i < index; a[biggest] >= a[i]);
                                                  ^
/Users/tiancheng/Documents/Software Validation/verification-project/experiment/openrouter-run/stage3-jml/zero_shot/Biggest/Biggest.java:20: error: Expected a declaration or a JML construct inside the JML annotation here
          @ loop invariant (\forall int i; 0 <= i && i < index; a[biggest] >= a[i]);
                                           ^
/Users/tiancheng/Documents/Software Validation/verification-project/experiment/openrouter-run/stage3-jml/zero_shot/Biggest/Biggest.java:20: error: not a statement
          @ loop invariant (\forall int i; 0 <= i && i < index; a[biggest] >= a[i]);
                                                                           ^
/Users/tiancheng/Documents/Software Validation/verification-project/experiment/openrouter-run/stage3-jml/zero_shot/Biggest/Biggest.java:20: error: ';' expected
          @ loop invariant (\forall int i; 0 <= i && i < index; a[biggest] >= a[i]);
                                                                                  ^
/Users/tiancheng/Documents/Software Validation/verification-project/experiment/openrouter-run/stage3-jml/zero_shot/Biggest/Biggest.java:20: error: Expected a declaration or a JML construct inside the JML annotation here
          @ loop invariant (\forall int i; 0 <= i && i < index; a[biggest] >= a[i]);
                                                                ^
12 errors
1 warning
